# misis2024f-24-17-vasyunina-s-v

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
StackArrT/: CMakeLists.txt  stack_arr_t_tests.cpp
StackArrT/stack_arr_t/: CMakeLists.txt  stack_arr_t.hpp
StackArrT_prj/: CMakeLists.txt
StackArrT_prj/StackArrT/: StackArrT.cpp
complex_prj/: CMakeLists.txt  complex_test.cpp
complex_prj/complex/: CMakeLists.txt  complex.cpp  complex.hpp
dynamic_array_prj/: CmakeLists.txt  dynamic_array_tests.cpp
dynamic_array_prj/dynamic_array/: CmakeLists.txt  dynamic_array.cpp  dynamic_array.hpp
final_project/: CMakeLists.txt  README.md  resources.qrc
final_project/doc/: documentation.md  technical.md  user_guide.md
final_project/include/: main.cpp
final_project/include/database/: CMakeLists.txt  database.cpp  database.hpp
final_project/include/gui/: CMakeLists.txt
final_project/include/gui/dialogs/: CMakeLists.txt  taskdialog.cpp  taskdialog.hpp
final_project/include/gui/mainwindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.hpp
final_project/include/gui/resources/: resources.qrc
final_project/include/gui/resources/styles/: main.qss
final_project/include/gui/widgets/: CMakeLists.txt  taskwidgets.cpp  taskwidgets.hpp
final_project/include/task/: CMakeLists.txt  task.cpp  task.h  task.hpp
final_project/include/taskmanager/: CMakeLists.txt  taskmanager.cpp  taskmanager.h  taskmanager.hpp
final_project/tests/: tests.cpp
first_class/: CMakeLists.txt  rectangle.cpp
hash_table_prj/: CMakeLists.txt  hash_table_tests.cpp
hash_table_prj/hash_table/: CMakeLists.txt  hash_table.hpp  hash_table_test  main.cpp  test
html/: annotated.html  annotated_dup.js  class_task-members.html  class_task.html  class_task.js  classes.html  database_8h.html  database_8h_source.html  dir_28a312d6cef621c8c2efef70f691ba1d.html  dir_28a312d6cef621c8c2efef70f691ba1d.js  dir_28a312d6cef621c8c2efef70f691ba1d_dep.dot  dir_42e4abd9f7ec8f083a3d7a187cb96b5e.html  dir_42e4abd9f7ec8f083a3d7a187cb96b5e.js  dir_458e36d003c17580407063972e90e510.html  dir_458e36d003c17580407063972e90e510.js  dir_6e26c4fa0932a05e14a04cfd72c3dbe2.html  dir_6e26c4fa0932a05e14a04cfd72c3dbe2.js  dir_e5c2d53f60ccd0aa5ae38f5a524d0a9e.html  dir_e5c2d53f60ccd0aa5ae38f5a524d0a9e.js  dir_e5c2d53f60ccd0aa5ae38f5a524d0a9e_dep.dot  dir_f6e32aafbab63cf0b28f3e90362d33ea.html  dir_f6e32aafbab63cf0b28f3e90362d33ea.js  dir_f6e32aafbab63cf0b28f3e90362d33ea_dep.dot  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  mainwindow_8h.html  mainwindow_8h_source.html  navtreedata.js  navtreeindex0.js  task_8hpp.html  task_8hpp.js  task_8hpp__incl.dot  task_8hpp_source.html  taskmanager_8hpp.html  taskmanager_8hpp_source.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_2.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
kr_1/: CMakeLists.txt  math_vector.hpp  math_vector_tests.cpp
latex/: annotated.tex  class_task.tex  database_8h.tex  database_8h_source.tex  dir_28a312d6cef621c8c2efef70f691ba1d.tex  dir_28a312d6cef621c8c2efef70f691ba1d.tex.tmp  dir_42e4abd9f7ec8f083a3d7a187cb96b5e.tex  dir_42e4abd9f7ec8f083a3d7a187cb96b5e_dep.dot  dir_458e36d003c17580407063972e90e510.tex  dir_6e26c4fa0932a05e14a04cfd72c3dbe2.tex  dir_6e26c4fa0932a05e14a04cfd72c3dbe2_dep.dot  dir_e5c2d53f60ccd0aa5ae38f5a524d0a9e.tex  dir_f6e32aafbab63cf0b28f3e90362d33ea.tex  files.tex  mainwindow_8h.tex  mainwindow_8h_source.tex  refman.tex  task_8hpp.tex  task_8hpp__incl.dot  task_8hpp_source.tex  taskmanager_8hpp.tex  taskmanager_8hpp_source.tex
opencv_1/: README.md  chessboard  main.cpp  main2.cpp  spiral
opencv_2/: README.md  main1  main1.cpp  main2  main2.cpp
rational_prj/: CMakeLists.txt  rational_tests.cpp
rational_prj/rational/: CMakeLists.txt  rational.cpp  rational.hpp
stack_base_prj/: CMakeLists.txt  stack_arr_t.hpp  stack_base.hpp  stack_base_tests.cpp  stack_lst_t.hpp
stack_lst_prj/: CMakeLists.txt  stack_lst_t_tests.cpp
stack_lst_prj/stack_lst_t/: CMakeLists.txt  stack_lst_t.hpp
vector_prj/: CmakeLists.txt
vector_prj/vector/: vector.cpp
